2006-02-12  Eric Anholt  <anholt@FreeBSD.org>

	* hw/kdrive/linux/Makefile.am:
	* hw/kdrive/src/Makefile.am:
	* include/kdrive-config.h.in:
	Add missing HAVE_DIX_CONFIG_H which caused issues with mismatched screen
	structure interpretations, and remove a bunch of unused junk from
	kdrive-config.h.  Xephyr almost works on my amd64.

2006-02-11  Eric Anholt  <anholt@FreeBSD.org>

	* hw/vfb/InitOutput.c: (xf86WrapperInit):
	* hw/xnest/Init.c: (xf86WrapperInit):
	Add stub xf86WrapperInits so that the servers will build even if os/ was
	built with XFree86LOADER set.

2006-02-11  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Xext/xres.c: 
	* afb/afbline.c:
	* fb/fbblt.c:
	* hw/dmx/config/scanner.l:
	Add <string.h>, <stdlib.h>, and <stdio.h> to clear undefined function
	warnings after the removal of libcwrapper headers.

2006-02-11  Alan Coopersmith  <alan.coopersmith@sun.com>	

	* cfb/cfbfillarc.c:
	* cfb/cfbzerarc.c:
	* hw/xfree86/xaa/xaaFillArc.c:
	* hw/xfree86/exa/exa_offscreen.c:
	* mfb/mfbfillarc.c:
	* mfb/mfbzerarc.c:
	<sys/limits.h> -> <limits.h> so we can compile on non-BSD OS'es

2006-02-10  Eric Anholt  <anholt@FreeBSD.org>

	* GL/glx/Makefile.am:
	* GL/mesa/X/Makefile.am:
	* GL/mesa/array_cache/Makefile.am:
	* GL/mesa/glapi/Makefile.am:
	* GL/mesa/main/Makefile.am:
	* GL/mesa/math/Makefile.am:
	* GL/mesa/shader/Makefile.am:
	* GL/mesa/swrast/Makefile.am:
	* GL/mesa/swrast_setup/Makefile.am:
	* GL/mesa/tnl/Makefile.am:
	* hw/kdrive/src/kdrive.c: (xf86WrapperInit):
	* include/kdrive-config.h.in:
	Remove libcwrapper damage from GLX (requires fresh Mesa HEAD), and get
	it compiling in kdrive.

2006-02-10  Eric Anholt  <anholt@FreeBSD.org>

	* GL/glx/glxcmds.c:
	* GL/glx/glximports.c:
	* GL/glx/glxscreens.c:
	* GL/glx/glxutil.c:
	* GL/glx/indirect_util.c:
	* GL/glx/single2.c:
	* GL/include/GL/glx_ansic.h:
	* GL/include/GL/xf86glx.h:
	* GL/mesa/X/xf86glx_util.c:
	* XTrap/xtrapddmi.c:
	* XTrap/xtrapdi.c:
	* XTrap/xtrapditbl.c:
	* Xext/cup.c:
	* Xext/mbuf.c: